# HydroESPro

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  button.c  buzzer.c  buzzer.h  component.mk  config.h  dht_sensor.c  dht_sensor.h  ds18b20.c  ds18b20.h  event_bus.c  event_bus.h  http_server.c  http_server.h  hydro_manager.c  hydro_manager.h  i2c_manager.c  i2c_manager.h  idf_component.yml  index.html  keep_alive.c  keep_alive.h  lcd_display.c  lcd_display.h  lcd_manager.c  lcd_manager.h  main.c  nvs_manager.c  nvs_manager.h  pcf_manager.c  pcf_manager.h  pins.h  relays.c  relays.h  rtc_ds3231.c  rtc_ds3231.h  rtc_manager.c  (+19 more)
